# rustchat

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: main.rs
core/src/modules/: data.rs  hub.rs  input.rs  mod.rs  output.rs  server.rs  utils.rs
react/: .eslintrc.js  .gitignore  package.json  tsconfig.json
react/src/api/feed/: actions.ts  slice.ts
react/src/api/types/: data.ts  input.ts  output.ts
react/src/api/user/: actions.ts  slice.ts
react/src/api/websocket/: saga.ts
react/src/app/: hooks.ts  layout.tsx  page.tsx  store.ts
react/src/components/: feed.tsx  login.tsx  main.tsx  participant.tsx  switcher.tsx  userlist.tsx
react/src/styles/: global.css  layout.module.css
src/: main.rs
src/modules/: data.rs  hub.rs  input.rs  mod.rs  output.rs  server.rs
